tests/verbatim_scanner/errors/false_start_then_real_title.txxt
Expected: [[6,8,"normal"]]
false start title:
    some content
    but no terminator

real title:
    actual content
:: python